# Levoit

./: .env.example  .gitignore  CLAUDE.md  PROJECT_INDEX.md  docker-compose.yml
.claude/: mcp_config.json  (+1 more)
backend/: alembic.ini  pyproject.toml
backend/src/: config.py  main.py
backend/src/api/: deps.py
backend/src/api/v1/: __init__.py  queries.py  rankings.py  scores.py  snapshots.py
backend/src/db/: init_mongo.py  mongo.py  postgres.py  redis.py  seed.py
backend/src/db/migrations/: env.py
backend/src/models/: __init__.py  enums.py  schemas.py  scrape_models.py  visibility.py
backend/src/pipelines/: __init__.py  daily_full_scan.py  hourly_rank_check.py  schedules.py  tasks.py
backend/src/services/: query_service.py  ranking_service.py  score_service.py  snapshot_service.py
backend/src/services/analyzer/: __init__.py  brand_matcher.py  cost_tracker.py  rank_extractor.py  score_calculator.py  snippet_extractor.py
backend/src/services/scraper/: __init__.py  base.py  chatgpt.py  google_ai.py  orchestrator.py  perplexity.py  processing.py  rate_limiter.py
backend/src/shared/: pagination.py
backend/tests/: test_api_queries.py  test_api_rankings.py  test_api_scores.py  test_api_snapshots.py  test_orchestrator.py  test_pipeline_daily.py  test_pipeline_hourly.py  test_processing.py  test_rank_extractor.py  test_rate_limiter.py  test_score_calculator.py  test_scrapers.py
backend/tests/fixtures/: firecrawl_chatgpt.json  firecrawl_google_ai.json  firecrawl_perplexity.json
backend/tests/integration/: test_api_full.py  test_full_pipeline.py
(+73 files in other folders)
