[project]
name = "levoit-geo"
version = "0.1.0"
description = "Levoit Brand GEO Growth Flywheel — Reddit VOC + Amazon Rufus GEO Platform"
requires-python = ">=3.12"
dependencies = [
    # ── Web framework ──
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",

    # ── Database ──
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",                  # PostgreSQL async driver
    "alembic>=1.14",                  # Migrations
    "motor>=3.6",                     # MongoDB async driver
    "redis[hiredis]>=5.2",            # Redis async

    # ── Data processing ──
    "polars>=1.18",
    "httpx>=0.28",                    # HTTP client for Firecrawl

    # ── Pipeline orchestration ──
    "prefect>=3.1",

    # ── Utilities ──
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "httpx",                          # TestClient
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
